# ComfyUI-Simple-Selector

./: README.md  __init__.py  pyproject.toml  selector_node.py
.github/workflows/: publish.yml
